syntax = "proto3";

package rules;

option go_package = "github.com/streamdal/snitch-protos/build/go/protos/rules";

enum TransformType {
  TRANSFORM_TYPE_UNKNOWN = 0;
  TRANSFORM_TYPE_REPLACE_VALUE = 1;
  TRANSFORM_TYPE_DELETE_FIELD = 2;
  TRANSFORM_TYPE_OBFUSCATE_VALUE = 3;
}

message TransformRequest {
  bytes data = 1;
  string path = 2;
  string value = 3;
  TransformType type = 4;
}

message TransformResponse {
  bytes data = 1;
  string error = 2;
}
